# golem

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Options.cc  Options.h
src/engine/: EngineFactory.cc  IC3IA.cc  IC3IA.h  ImplicitTPA.cc  ImplicitTPA.h
src/utils/: SmtSolver.cc  SmtSolver.h
test/: CMakeLists.txt  test_IC3.cc  test_ImplicitTPA.cc
